crates/sentinel-driver/tests/snapshots/ui__c41_init_self_used_before_assigned.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c41_init_self_used_before_assigned.sentinel\")"
---
sentinel::types::init_self_used_before_assigned

  × `init` of class `K` uses `self` before `b` is assigned
    ╭─[tests/ui/c41_init_self_used_before_assigned.sentinel:10:17]
  9 │         self.a = n;
 10 │         let t = self.get();
    ·                 ──┬─
    ·                   ╰── 
 11 │         self.b = [t];
    ╰────
