crates/sentinel-driver/tests/snapshots/ui__c42_duplicate_default_impl.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c42_duplicate_default_impl.sentinel\")"
---
sentinel::resolve::duplicate_default_impl

  × duplicate default impl of `Writer` for `FileSink` in this scope
    ╭─[tests/ui/c42_duplicate_default_impl.sentinel:25:1]
 24 │     
 25 │ ╭─▶ impl as Writer for FileSink {
 26 │ │       fn write(self: &mut Self, data: i64) -> i64 {
 27 │ │           data * 2
 28 │ │       }
 29 │ ├─▶ }
    · ╰──── 
 30 │     
    ╰────
