crates/sentinel-driver/tests/snapshots/ui__c42_impl_move_out_of_self_struct.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c42_impl_move_out_of_self_struct.sentinel\")"
---
sentinel::borrow::move_out_of_self

  × cannot move `self.v` out: `self` is only borrowed
    ╭─[tests/ui/c42_impl_move_out_of_self_struct.sentinel:24:9]
 23 │     fn take(self: &Self) -> [i64] {
 24 │         self.v
    ·         ───┬──
    ·            ╰── 
 25 │     }
    ╰────
